# SolSniperPro

./: .env.example  .gitignore  API_STATUS.md  ARCHITECTURE.md  BUG_REPORT.md  COMPREHENSIVE_TEST_REPORT.md  CORS问题修复说明.md  Cargo.toml  FRONTEND_API_FIX_PLAN.md  FRONTEND_FIX_SUMMARY.md  HOOKS_FIX_GUIDE.md  HOOKS_QUICK_FIX.md  PROJECT_STRUCTURE.md  QUICK_START.md  README.md  README_CN.md  SECURITY.md  SNIPING_STRATEGIES.md  STRATEGIES_REPORT.md  TESTING.md  TESTING_SUMMARY_CN.md  comprehensive_bug_test.sh  config.toml  debug-console.html  mock-api-server.js  product.md  setup_windows.bat  setup_wsl_windows.bat  test-page.html  test_results.json  test_websocket.js  使用手册.md  功能测试报告.md  功能测试报告_完整版.md  完整运行指南.md  快速参考.md  快速启动指南.md  性能测试报告.md  错误修复完整说明.md  项目交付完成报告.md  (+1 more)
.cargo/: config.toml
crates/advanced-strategies/: Cargo.toml
crates/advanced-strategies/src/: jito_bundle.rs  lib.rs  mempool_monitor.rs  pool_creation_monitor.rs  priority_fee_optimizer.rs  sandwich_attack.rs  token_deployment_monitor.rs
crates/api-server/: Cargo.toml
crates/api-server/src/: config.rs  main.rs  models.rs  state.rs
crates/api-server/src/api/: auth.rs  health.rs  metrics.rs  mod.rs  positions.rs  risk.rs  strategies.rs  tokens.rs  trades.rs  ws.rs
crates/behavior-pattern/: Cargo.toml
crates/behavior-pattern/src/: indicators.rs  lib.rs  patterns.rs  recognizer.rs
crates/core/: Cargo.toml
crates/core/src/: cache_manager.rs  config.rs  enhanced_config.rs  error.rs  lib.rs  metrics.rs  risk_controller.rs  rpc_manager.rs  types.rs  validator.rs
crates/data-collector/: Cargo.toml
crates/data-collector/src/: event_parser.rs  kafka_producer.rs  lib.rs  parallel_fetcher.rs  program_subscriber.rs  websocket.rs
crates/ml-model/: Cargo.toml
crates/ml-model/src/: classifier.rs  feature_extractor.rs  lib.rs  online_learning.rs  regressor.rs
crates/risk-analyzer/: Cargo.toml
crates/risk-analyzer/src/: contract_analyzer.rs  holder_analyzer.rs  lib.rs  liquidity_analyzer.rs
crates/smart-money-tracker/: Cargo.toml
crates/smart-money-tracker/src/: analyzer.rs  follower.rs  identifier.rs  lib.rs
crates/strategy-engine/: Cargo.toml
crates/strategy-engine/src/: exit_strategy.rs  lib.rs  matcher.rs  position_manager.rs  profit_predictor.rs  strategies.rs  strategy_priority.rs
crates/trading-engine/: Cargo.toml
crates/trading-engine/src/: jito_client.rs  lib.rs  mev_protector.rs  slippage_protector.rs  transaction_builder.rs  wallet_manager.rs
docs/: 01_SYSTEM_ARCHITECTURE.md  02_STRATEGY_GUIDE.md  03_API_REFERENCE.md  04_DEPLOYMENT_GUIDE.md  05_FRONTEND_ARCHITECTURE.md  06_FRONTEND_IMPLEMENTATION_SUMMARY.md
docs/guides/: ADVANCED_STRATEGIES.md  FEATURES.md  IMPLEMENTATION_SUMMARY.md  QUICKSTART.md  STRATEGY_IMPLEMENTATION_EN.md
docs/reports/: COVERAGE_REPORT.md  SECURITY_AUDIT.md  TEST_DELIVERY.md  TEST_REPORT.md  TEST_SUMMARY.md
frontend/: README.md  index.html  package.json  tailwind.config.js  vite.config.ts
frontend/src/: App.tsx  router.tsx
frontend/src/api/: auth.ts  client.ts  metrics.ts  risk.ts  strategies.ts  tokens.ts  trades.ts
frontend/src/components/common/: Badge.tsx  Button.tsx  Card.tsx  Input.tsx  Loading.tsx  Modal.tsx  Table.tsx
frontend/src/components/layout/: Footer.tsx  Header.tsx  Layout.tsx  Sidebar.tsx
frontend/src/hooks/: useAuth.ts  useMetrics.ts  usePositions.ts  useStrategies.ts  useTokens.ts  useTrades.ts  useWebSocket.ts
frontend/src/pages/: Analytics.tsx  CommandCenter.tsx  Dashboard.tsx  Login.tsx  Positions.tsx  RiskControl.tsx  Settings.tsx  Strategies.tsx  Tokens.tsx  Trading.tsx
frontend/src/stores/: authStore.ts  strategyStore.ts  tokenStore.ts  tradeStore.ts  uiStore.ts
frontend/src/styles/: index.css
frontend/src/types/: api.ts  metrics.ts  risk.ts  strategy.ts  token.ts  trade.ts
frontend/src/utils/: constants.ts  format.ts  helpers.ts  validation.ts
scripts/: add_author_info.sh  build.bat  build.sh  init_db.sql  init_db_simplified.sql  process_docs.py  run_tests.sh  start.sh  stop.sh
solana/data/: DATA_README.md
