[workspace]
members = [
    "crates/core",
    "crates/data-collector",
    "crates/risk-analyzer",
    "crates/strategy-engine",
    "crates/trading-engine",
    "crates/ml-model",
    "crates/smart-money-tracker",
    "crates/behavior-pattern",
    "crates/advanced-strategies",
    "crates/api-server",
]
resolver = "2"

[workspace.package]
version = "2.0.0"
edition = "2021"
authors = ["SolSniper Pro Team"]
license = "MIT"
repository = "https://github.com/solsniper/solsniper-pro"

[workspace.dependencies]
# Async runtime
tokio = { version = "1.40", features = ["full"] }
tokio-util = "0.7"
futures = "0.3"
async-trait = "0.1"

# Solana
solana-client = "2.0"
solana-sdk = "2.0"
solana-transaction-status = "2.0"
anchor-client = "0.30"
anchor-lang = "0.30"

# Web framework
axum = { version = "0.7", features = ["ws"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["cors", "trace"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bincode = "1.3"

# Database
sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "postgres", "chrono", "uuid"] }
redis = { version = "0.27", features = ["tokio-comp", "connection-manager"] }
scylla = "0.14"

# Message queue
rdkafka = { version = "0.36", features = ["cmake-build"] }

# ML & Data processing
ndarray = "0.16"
linfa = "0.7"
linfa-trees = "0.7"
polars = { version = "0.44", features = ["lazy", "temporal", "parquet"] }

# Concurrency
dashmap = "6.1"
rayon = "1.10"
parking_lot = "0.12"

# Caching
moka = { version = "0.12", features = ["future"] }

# Observability
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
prometheus = "0.13"

# HTTP client
reqwest = { version = "0.12", features = ["json"] }

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Time
chrono = { version = "0.4", features = ["serde"] }

# Config
config = "0.14"
dotenvy = "0.15"

# Utils
uuid = { version = "1.10", features = ["v4", "serde"] }
bs58 = "0.5"
rand = "0.8"
