[package]
name = "solsniper-api-server"
version.workspace = true
edition.workspace = true

[[bin]]
name = "solsniper-api-server"
path = "src/main.rs"

[dependencies]
# Workspace dependencies
solsniper-core = { path = "../core" }
solsniper-strategy-engine = { path = "../strategy-engine" }
solsniper-risk-analyzer = { path = "../risk-analyzer" }
solsniper-trading-engine = { path = "../trading-engine" }
solsniper-data-collector = { path = "../data-collector" }

tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }

# Web framework
axum = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true }

# Database
sqlx = { workspace = true }
redis = { workspace = true }

# Config
config = { workspace = true }
dotenvy = { workspace = true }
