[package]
name = "solsniper-core"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
# Workspace dependencies
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
solana-sdk = { workspace = true }
solana-client = { workspace = true }
uuid = { workspace = true }
rand = { workspace = true }
async-trait = { workspace = true }
moka = { workspace = true }
bincode = { workspace = true }
redis = { workspace = true }
dashmap = { workspace = true }
