[package]
name = "solsniper-data-collector"
version.workspace = true
edition.workspace = true

[dependencies]
solsniper-core = { path = "../core" }
tokio = { workspace = true }
tokio-util = { workspace = true }
futures = { workspace = true }
async-trait = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
solana-client = { workspace = true }
solana-sdk = { workspace = true }
solana-transaction-status = { workspace = true }
rdkafka = { workspace = true }
dashmap = { workspace = true }
chrono = { workspace = true }
reqwest = { workspace = true }
