[package]
name = "solsniper-smart-money-tracker"
version.workspace = true
edition.workspace = true

[dependencies]
solsniper-core = { path = "../core" }
tokio = { workspace = true }
async-trait = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
solana-client = { workspace = true }
solana-sdk = { workspace = true }
solana-transaction-status = { workspace = true }
dashmap = { workspace = true }
chrono = { workspace = true }
sqlx = { workspace = true }
