[package]
name = "solsniper-trading-engine"
version.workspace = true
edition.workspace = true

[dependencies]
solsniper-core = { path = "../core" }
tokio = { workspace = true }
async-trait = { workspace = true }
serde = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
solana-client = { workspace = true }
solana-sdk = { workspace = true }
bs58 = { workspace = true }
